--- a/LudoBrowser/LudoBrowser.csproj
+++ b/LudoBrowser/LudoBrowser.csproj
@@ -7,9 +7,11 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Aspnet.signalr" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="RestSharp" Version="106.6.7" />
   </ItemGroup>
 
 </Project>
