--- a/LudoBrowser/LudoBrowser.csproj
+++ b/LudoBrowser/LudoBrowser.csproj
@@ -5,6 +5,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\lib\lib\signalr\dist\browser\signalr.js" />
+    <None Include="wwwroot\lib\lib\signalr\dist\browser\signalr.min.js" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Aspnet.signalr" Version="2.4.0" />
@@ -12,6 +17,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="RestSharp" Version="106.6.7" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
