--- a/src/LudoBrowser/LudoBrowser.csproj
+++ b/src/LudoBrowser/LudoBrowser.csproj
@@ -15,8 +15,10 @@
     <PackageReference Include="Microsoft.Aspnet.signalr" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="RestSharp" Version="106.6.7" />
+    <PackageReference Include="Seq.Extensions.Logging" Version="4.0.0" />
   </ItemGroup>
 
 
