--- a/src/LudoBrowser/appsettings.json
+++ b/src/LudoBrowser/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
   "AllowedHosts": "*"
 }
